# App-Containerization-Docker-2

./: .dockerignore  .gitignore  241.ipynb  Dockerfile  README.md  backups_main.py  db_analytical_functions.sql  docker-compose.yml  init.sql  main.py  ml_main.py  pyproject.toml  run_all_services.sh
dockerfiles/main/: Dockerfile.main
ml_model/ml_model/: __init__.py  ml_model.py
source/: api_key.txt  constants.py  metals.txt
source/backup_functions/: backup_functions.py
source/data_preparation/: data_preparation.py
source/db_functions/: db_functions.py
source/get_metals_data/: __init__.py  get_metals_data.py
source/logger/: app_logger.py
source/ml_model/: __init__.py  ml_model.py
sql/: init.sql
